# sweet

./: .env  .gitignore  Cargo.toml  README.md
app_macro/: Cargo.toml
app_macro/src/: lib.rs
entity/: 20220421_all.sql  Cargo.toml
entity/src/: category.rs  lib.rs  medicinal.rs  user.rs
migrations/: 20220421_all.sql
src/: error.rs  lib.rs  logger.rs  main.rs  settings.rs
src/api/: mod.rs
src/api/v1/: auth.rs  medicinal.rs  mod.rs  user.rs
src/middleware/: cors.rs  handle_error.rs  jwt.rs  mod.rs
src/repository/: mod.rs  traits.rs
src/repository/dao/: category.rs  medicinal.rs  mod.rs  user.rs
src/repository/dto/: mod.rs  user.rs
src/repository/vo/: user.rs
src/util/: jwt.rs  mod.rs  serde_format.rs  util.rs
