[package]
name = "sweet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
axum = { version = "0.5.3", features = ["headers"] }
axum-macros = "0.2.0"
bcrypt = "0.12.1"
chrono = "0.4.19"
dotenv = "0.15.0"
jsonwebtoken = "8.1.0"
once_cell = "1.10.0"
rbson = "2.0.3"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
rbatis = { version = "3.0.31", default-features = false, features = ["mysql", "runtime-async-std-rustls", "debug_mode"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.2.5", features = ["trace", "auth", "compression-gzip"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }
futures = "0.3.21"
config = "0.13.1"
time = { version = "0.3.9", features = ["macros"] }
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "time", "local-time"]}