[package]
name = "app_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dependencies]
async-trait = "0.1.53"
rbatis = { version = "3.1.6", features = ["mysql", "runtime-tokio-rustls", "debug_mode"] }
serde = "1.0.136"

